--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
+    "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
