--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:prod": "webpack -p --env production --progress",
     "dev-server": "webpack-dev-server",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild":"yarn run build:prod"
   },
   "author": "Beck",
   "license": "ISC",
