--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
+    "firebase": "^7.9.3",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -37,6 +38,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "uuid": "^7.0.1",
@@ -59,6 +61,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^23.6.0",
     "live-server": "^1.2.1",
+    "redux-mock-store": "^1.5.4",
     "webpack-dev-server": "^3.10.3"
   }
 }
